Correct the timeline covered

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -5,7 +5,7 @@
 }
 
 .middle-line .compeleted {
-  width: 100%;
+  width: 10%;
   background: #f8d16c;
 }
 
